<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".pplatillos.mod_platillo">

    <ImageButton
        android:id="@+id/btnHome"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/btnHome"
        android:onClick="home"
        android:src="@android:color/holo_orange_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnRegresar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="#FFEB3B"
        android:contentDescription="@string/btnRegresar"
        android:onClick="regresar"
        android:src="@drawable/regresar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/btnInicio"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="#FFEB3B"
        android:contentDescription="@string/btnInicio"
        android:onClick="home"
        android:src="@drawable/inicio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnRegresar" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="350dp"
        android:layout_height="550dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/fondo"
        android:src="@android:color/background_light"
        app:layout_constraintBottom_toTopOf="@+id/btnInicio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnHome" />

    <TextView
        android:id="@+id/tNomPlat"
        android:layout_width="150dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/tNomPlat"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <EditText
        android:id="@+id/txtNomPlat"
        android:layout_width="150dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/txtNomPlat"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/imgPlat"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/tNomPlat" />

    <TextView
        android:id="@+id/tPrecio"
        android:layout_width="150dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/tPrecio"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/txtNomPlat" />

    <EditText
        android:id="@+id/txtPrePlat"
        android:layout_width="150dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/txtPrePlat"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/tPrecio" />

    <ImageView
        android:id="@+id/imgPlat"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:contentDescription="@string/imgBebida"
        android:src="@android:drawable/alert_dark_frame"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <Button
        android:id="@+id/btnCargarImg"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="#FFEB3B"
        android:onClick="cargarimg"
        android:text="@string/btnCargarImg"
        app:layout_constraintEnd_toEndOf="@+id/imgPlat"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="@+id/imgPlat"
        app:layout_constraintTop_toBottomOf="@+id/imgPlat" />

    <TextView
        android:id="@+id/tIngPlat"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:gravity="center_horizontal|fill_vertical"
        android:text="@string/tIngPlat"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/list_ingPlat"
        app:layout_constraintStart_toStartOf="@+id/list_ingPlat"
        app:layout_constraintTop_toBottomOf="@+id/txtPrePlat" />

    <TextView
        android:id="@+id/tDesPlat"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:gravity="center_horizontal|fill_vertical"
        android:text="@string/tDesPlat"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/txtDesPlat"
        app:layout_constraintStart_toStartOf="@+id/txtDesPlat"
        app:layout_constraintTop_toBottomOf="@+id/btnCargarImg" />

    <EditText
        android:id="@+id/txtDesPlat"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/txtDesPlat"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/tDesPlat" />

    <ListView
        android:id="@+id/list_ingPlat"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/tIngPlat" />

    <Button
        android:id="@+id/btnAgIngPlat"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:contentDescription="@string/mas"
        android:gravity="bottom|center"
        android:onClick="agregarIng"
        android:text="@string/mas"
        app:layout_constraintEnd_toEndOf="@+id/list_ingPlat"
        app:layout_constraintTop_toBottomOf="@+id/list_ingPlat" />

    <Button
        android:id="@+id/btnElIngPlat"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/mas"
        android:gravity="bottom|center"
        android:onClick="eliminarIng"
        android:text="@string/menos"
        app:layout_constraintEnd_toStartOf="@+id/btnAgIngPlat"
        app:layout_constraintStart_toStartOf="@+id/list_ingPlat"
        app:layout_constraintTop_toBottomOf="@+id/list_ingPlat" />

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="#FFEB3B"
        android:onClick="cancelar"
        android:text="@string/btnCancelar"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toStartOf="@+id/btnAgregar"
        app:layout_constraintStart_toStartOf="@+id/imageView2" />

    <Button
        android:id="@+id/btnAgregar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:layout_marginBottom="16dp"
        android:background="#FFEB3B"
        android:onClick="actualizar"
        android:text="@string/btnAgregarB"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2" />
</androidx.constraintlayout.widget.ConstraintLayout>